force-app/main/default/objects/Recall__c/Recall__c.object-meta.xml
<CustomObject>
    <label>Recall</label>
    <nameField>
        <label>Recall Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recalls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>