force-app/main/default/objects/Recall__c/fields/Lot__c.field-meta.xml
<CustomField>
    <fullName>Lot__c</fullName>
    <label>Lot #</label>
    <length>80</length>
    <type>Text</type>
</CustomField>