force-app/main/default/objects/Recall__c/fields/NDC__c.field-meta.xml
<CustomField>
    <fullName>NDC__c</fullName>
    <label>NDC#</label>
    <length>80</length>
    <type>Text</type>
</CustomField>