force-app/main/default/objects/Recall__c/fields/Return_To__c.field-meta.xml
<CustomField>
    <fullName>Return_To__c</fullName>
    <label>Return To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>Merchandiser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>