force-app/main/default/objects/Recall__c/fields/Symptoms__c.field-meta.xml
<CustomField>
    <fullName>Symptoms__c</fullName>
    <label>Symptoms</label>
    <type>TextArea</type>
</CustomField>