force-app/main/default/objects/Recall__c/recordTypes/Fitbitz.recordType-meta.xml
<RecordType>
    <fullName>Fitbitz</fullName>
    <active>true</active>
    <label>Fitbitz</label>
</RecordType>