force-app/main/default/objects/Recall__c/recordTypes/Tylenolz.recordType-meta.xml
<RecordType>
    <fullName>Tylenolz</fullName>
    <active>true</active>
    <label>Tylenolz</label>
</RecordType>